# TaskManager

./: CMakeLists.txt  Project.cpp  Project.h  ProjectAddButton.cpp  ProjectAddButton.h  ProjectGroup.cpp  ProjectGroup.h  ProjectView.cpp  ProjectView.h  SidePanel.cpp  SidePanel.h  SidePanelOption.cpp  SidePanelOption.h  TaskManager.cpp  TaskManager.h  View.h  main.cpp
styles/: light.css
